[package]
name = "rustos"
version = "0.0.1"
authors = [ "you@example.com" ]

[dependencies.lazy_static]
git = "https://github.com/ryanra/lazy-static.rs"
branch = "rustos"

[dependencies.std]
path = "lib/libstd"

[dependencies.core]
path = "lib/libcore"

[dependencies.collections]
path = "lib/libcollections"

[dependencies.rlibc]
path = "lib/librlibc"

[lib]
name = "rustos"
crate-type = ["staticlib"]
