[package]
name = "rustos"
version = "0.0.1"
authors = [ "you@example.com" ]

[lib]
name = "rustos"
crate-type = ["staticlib"]


[dependencies.lazy_static]
git = "https://github.com/ryanra/lazy-static.rs"
branch = "rustos"

[dependencies.core]
path = "lib/libcore"

[dependencies.alloc]
path = "lib/liballoc"
default-features = false
features = ["external_funcs"]

[dependencies.collections]
path = "lib/libcollections"

[dependencies]
rlibc = "*"
