[package]
name = "rustos"
version = "0.0.1"
authors = [ "you@example.com" ]

[lib]
name = "rustos"
crate-type = [ "staticlib" ]


#[dependencies.core]
#path = "lib/libcore"

[dependencies.alloc]
path = "lib/liballoc"
default-features = false
features = [ "external_crate" ]

[dependencies.collections]
path = "lib/libcollections"


[dependencies.bitflags]
path = "bitflags"

[dependencies.external]
path = "bump-pointer"

[dependencies.lazy-static-spin]
git = "https://github.com/Ericson2314/lazy-static-spin"

[dependencies]
rlibc = "*"
