[package]
name = "rustrt"
version = "0.0.1"
authors = [ "you@example.com" ]

[lib]
name = "rustrt"


[features]
default = ["rustos"]
rustos = []

[dependencies.core]
path = "../libcore"

[dependencies.libc]
path = "../liblibc"

[dependencies.alloc]
path = "../liballoc"

[dependencies.collections]
path = "../libcollections"
